# testcmake

./: .travis.yml  CMakeLists.txt  README.rst  build.sh  install-linux.sh  main  main.cpp
travis/: .travis.yml  build.sh  install-linux.sh
